--- a/src/Component/Css/footer.css
+++ b/src/Component/Css/footer.css
@@ -1,4 +1,13 @@
 .h100{
     position:relative ;
-    top: 100vh;
+    height: 10vh;
+    top:90vh;
+}
+p{
+    margin-left: 30px;
+    font-size: large;
+    padding-top: 20px;
+}
+.bg-purpalLight{
+    background-color: #603eb3;
 }
