--- a/src/Component/Css/footer.css
+++ b/src/Component/Css/footer.css
@@ -1,8 +1,9 @@
 .h100{
     display: flex;
     justify-content: baseline;
-    position:relative ;
+    position:sticky ;
     height: 10vh;
+    margin-top: 20vh;
     
 }
 p{
